ENG-2246: Fix YB dashboard layout
Summary:
- Removed unnecessary spacing after the nav bar
- Removed fixed positioning for top nav as it was causing layout issues
- Fixed double header which didnt show up before
- Fixed default replication factor bug.

Test Plan: Tested on my local machine.

Reviewers: ram, bogdan, kannan

Reviewed By: kannan

Subscribers: ybase

Differential Revision: https://phabricator.dev.yugabyte.com/D3341

--- a/www/yb.css
+++ b/www/yb.css
@@ -94,7 +94,6 @@ body {
 }
 
 .yb-main {
-  margin-top: 50px;
 }
 
 .footer {
@@ -107,4 +106,8 @@ body {
 }
 .footer pre {
   border: none;
+}
+
+.yb-footer {
+  margin-left: 20px;
 }
